zoo/static/hotplate-playbooks/roles/common/files/firewalls/vmthing.v4
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
-A POSTROUTING -o eth0 -j MASQUERADE
COMMIT
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -p icmp -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED,UNTRACKED -j ACCEPT
-A FORWARD -d 10.0.0.2  -j ACCEPT
-A FORWARD -i internet -o eth0 -j ACCEPT
-A FORWARD -m state --state RELATED,ESTABLISHED  -j ACCEPT
-A FORWARD -i internet -o internet -j ACCEPT
-A FORWARD -i linknet -o linknet -j ACCEPT
-A FORWARD -i cesspit -o cesspit -j ACCEPT
COMMIT
